--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -28,12 +28,13 @@ layout: default
 {% assign pane = site.pages | where:"permalink", url | first %}
 
 <article class="page" id="{{ pane.permalink | slice: 1,pane.permalink.size }}">
-    <div class="box">
+    <div class="content">
         <h1>{{ pane.title }}</h1>
         {{ pane.content | markdownify | replace: "\", "<br />" }}
     </div>
 
     {% if pane.images %}
+    <aside>
         {% for image in pane.images %}
         <figure class="box">
             {% include components/image.html image=image.url alt=image.alt style="card" %}
@@ -44,6 +45,7 @@ layout: default
             {% endif %}
         </figure>
         {% endfor %}
+    </aside>
     {% endif %}
 
 </article>
