--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,14 +4,15 @@ layout: default
 
 <article class="page">
 
-    <div class="box">
+    <div class="content">
         <h1>{{ page.title }}</h1>
         {{ content | replace: "\", "<br />" }}
     </div>
 
     {% if page.images %}
+    <aside>
         {% for image in page.images %}
-        <figure class="box">
+        <figure>
             {% include components/image.html image=image.url alt=image.alt style="card" %}
             {% if image.caption %}
                 <figcaption>
@@ -20,6 +21,7 @@ layout: default
             {% endif %}
         </figure>
         {% endfor %}
+    </aside>
     {% endif %}
 
 </article>
