--- a/_assets/css/components/_article.scss
+++ b/_assets/css/components/_article.scss
@@ -36,7 +36,7 @@
 
 
     .page {
-        padding: $spacing-huge * 3;
+        padding: $spacing-huge;
 
         .content {
             order: 2;
@@ -95,12 +95,15 @@
 @mixin article-medium() {
 
     .page {
+        padding: $spacing-huge * 3;
+
         .content {
             flex-basis: 65%;
             padding: 0 $spacing-huge * 2;
         }
         aside {
             flex-basis: 35%;
+            max-width: em(400);
         }
     }
 
