--- a/_assets/css/components/_article.scss
+++ b/_assets/css/components/_article.scss
@@ -50,6 +50,7 @@
 
         aside {
             display: flex;
+            max-width: em(400);
 
             & > figure {
                 flex: 1;
@@ -95,7 +96,6 @@
 @mixin article-medium() {
 
     .page {
-        padding: $spacing-huge * 3;
 
         .content {
             flex-basis: 65%;
@@ -103,7 +103,6 @@
         }
         aside {
             flex-basis: 35%;
-            max-width: em(400);
         }
     }
 
@@ -122,4 +121,7 @@
         }
     }
 
+    .page {
+        padding: $spacing-huge * 3;
+     }
 }
