--- a/_assets/css/components/_article.scss
+++ b/_assets/css/components/_article.scss
@@ -42,6 +42,8 @@
 
     .page {
         padding: $spacing-huge;
+        margin: $spacing-huge;
+        min-height: 100%;
 
         .content {
             order: 2;
@@ -68,6 +70,11 @@
 
         h1 {
             margin-top: 0;
+        }
+
+        h2 {
+            font-size: $font-size-large;
+            margin: $spacing-huge 0 $spacing-small;
         }
 
     }
@@ -98,6 +105,22 @@
         }
     }
 
+
+    .links {
+        border-top: 2px solid $color-border;
+        margin: $spacing-medium 0 $spacing-huge * 2;
+
+        & > li {
+            border-bottom: 2px solid $color-border;
+            padding: $spacing-tiny 0;
+        }
+    }
+
+
+    .buttons {
+        display: flex;
+    }
+
 }
 
 
@@ -105,7 +128,6 @@
 @mixin article-medium() {
 
     .page {
-
         .content {
             flex-basis: 65%;
             padding: 0 $spacing-huge * 2;
