--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,7 @@
         </address>
         {% endif %}
 
-        {% if info.email %}<a class="email" href="mailto:{{ info.email | encode_email }}">{{ info.email }}</a>{% endif %}
+        {% if info.email %}<span><a class="email" href="mailto:{{ info.email | encode_email }}">{{ info.email }}</a></span>{% endif %}
         {% if info.tel %}<span class="tel">TEL: {{ info.tel }}</span>{% endif %}
         {% if info.mobile %}<span class="mobile">TEL: {{ info.mobile }}</span>{% endif %}
 
