--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,10 @@ layout: compress
       {{ content }}
     </main>
 
+    <footer id="footer">
+        <span>Design & Development by Bert Bruggeman</span>
+    </footer>
+
     {% include_cached scripts.html %}
 
     {% asset css/non-critical !type %}
