--- a/_assets/css/components/_page.scss
+++ b/_assets/css/components/_page.scss
@@ -1,178 +1,61 @@
-// PAGE COMPONENTS
+@mixin page() {
+    .page {
+        justify-content: center;
+        padding: $nav-height $spacing-huge $spacing-huge;
 
-// page (critical)
-@mixin page {
-
-    #header {
-        font-weight: 900;
-        letter-spacing: .15em;
-        text-transform: uppercase;
-        padding-top: em(108);
-        position: relative;
-    }
-
-    #vcard {
-        position: absolute;
-        margin: em(2) 0 0 auto;
-        padding-left: 0;
-        text-align: right;
-        top: $spacing-huge;
-        right: $spacing-huge;
-        z-index: 4;
-
-        & > * {
-            font-size: $font-size-tiny;
-            display: block;
+        & > div,
+        aside {
+            margin-bottom: $spacing-huge;
+            flex: 1 100%;
         }
 
-        address {
-            font-style: normal;
+        & > div {
+            order: 2;
         }
 
-    }
+        aside {
+            display: flex;
+            max-width: em(420);
 
-    #nav {
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        width: 100%;
-        max-width: $breakpoint-huge;
-        background-color: $color-white;
-        z-index: 3;
-        padding: $spacing-huge;
-        margin: 0 auto;
-        transition: padding-top .1s ease-out;
+            & > figure {
+                flex: 1;
+            }
 
-        &.small {
-            padding-top: $spacing-medium;
-            padding-bottom: $spacing-medium;
-            transition: padding-top .2s ease-in;
+            & + .content {
+                max-width: em(760);
+            }
         }
-    }
 
-    #logo {
-        display: block;
-        font-size: $font-size-huge;
-        font-weight: 300;
-        letter-spacing: .2em;
-        line-height: 120%;
-        width: 11em;
-        margin: 4em auto 7em;
-        text-align: center;
-
-        strong {
-            display: block;
-            font-weight: 900;
-            font-size: em($font-size-medium, $font-size-huge);
-            letter-spacing: .75em;
+        figure {
+            margin: $spacing-medium 0;
         }
-    }
 
-    #main,
-    #footer {
-        visibility: hidden;
-        opacity: 0;
-    }
+        picture:before {
+            padding-top: 100%;
+            background-color: transparent;
+        }
 
-    #main {
-        display: flex;
-        flex-wrap: wrap;
-    }
-
-}
-
-// page small
-@mixin page-small {
-    #nav > a {
-        width: 30px;
-        height: 30px;
-        overflow: hidden;
-        display: flex;
-        align-items: center;
-    }
-}
-
-
-// page large
-@mixin page-large {
-    body {
-        margin: 0 auto;
-        max-width: $breakpoint-huge;
-    }
-}
-
-
-
-// page loaded (non-critical)
-@mixin page-loaded {
-    #main,
-    #footer {
-        visibility: visible;
-        animation: 0.15s ease-out 0.25s 1 fadeIn forwards;
-    }
-
-    #main img.lazyloaded {
-        animation-delay: .25s;
     }
 
 }
 
 
-@mixin focus-effect-line (
-    $selector: "#nav ul  a",
-    $spacing: .4em
-) {
-    #{$selector} {
-        &:after {
-            content: "";
-            display: block;
-            height: em(3, $font-size-small);
-            margin-top: $spacing;
-            @include focus-effect-background-image($color-text);
-            background-repeat: no-repeat;
-            background-position: center center;
-            background-size: 0%;
-            transition: background-size .4s ease-in-out;
+
+@mixin page-medium() {
+
+    .page {
+        padding-left: $spacing-huge * 2;
+        padding-right: $spacing-huge * 2;
+
+        & aside + div {
+            flex-basis: 65%;
+            padding-left: $spacing-huge * 2;
         }
 
-        &.active:after,
-        &:focus:after,
-        &:active:after {
-            background-size: 240%;
+        aside {
+            flex-basis: 35%;
         }
+
     }
-}
 
-// menu dropdown
-@mixin menu-slide-left (
-    $background: $color-white,
-    $selector: "#nav > ul"
-) {
-    #{$selector} {
-        display: block;
-        position: fixed;
-        top: em(78);
-        left: 0;
-        right: 0;
-        bottom: 0;
-        width: 100%;
-        padding: $spacing-huge * 1.5;
-        background: rgba($background, 0.95);
-        transition: transform .015s ease-in-out;
-        transform: translateX(-100%);
-
-        li {
-            margin-bottom: $spacing-medium;
-        }
-
-        a {
-            display: inline-block;
-        }
-
-        &.active {
-            transform: translateX(0);
-            transition: transform .25s ease-in-out;
-        }
-    }
 }
