--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,5 +1,5 @@
 {% asset js/default async:true !type %}
 
-{% if include.layout == frontpage %}
+{% if page.layout == "frontpage" %}
 {% asset js/frontpage async:true !type %}
 {% endif %}
