--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@ layout: compress
         <span>Design & Development by Bert Bruggeman</span>
     </footer>
 
-    {% include_cached scripts.html %}
+    {% include scripts.html %}
 
     {% asset css/non-critical !type %}
 
