--- a/_includes/card.html
+++ b/_includes/card.html
@@ -5,9 +5,16 @@
     </div>
 
     {% if item.images %}
+        {% assign count = item.images.size %}
+        {{ count}}
         {% for image in item.images %}
-        <figure>
-            {% include components/image.html image=image.url alt=image.alt style="card" %}
+
+        {% capture style %}
+        {% if item.images.size == 1 %}card-wide{% else %}card{% endif %}>
+        {% endcapture %}
+        {{ item.images.size }}
+        <figure{% if item.images.size == 1 %} class="wide"{% endif %}>
+            {% include components/image.html image=image.url alt=image.alt style=style %}
             {% if image.caption %}
                 <figcaption>
                     {{ image.caption }}
