--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,7 +3,7 @@
     <h1>Projecten</h1>
 
     {% for post in site.posts reversed %}
-    <article class="card">
+    <article class="card project">
 
         <div>
             <h1>{% if post.subtitle %}<strong>{{ post.subtitle }}</strong> {% endif %}{{ post.title }}</h1>
