--- a/_assets/css/components/_projects.scss
+++ b/_assets/css/components/_projects.scss
@@ -12,38 +12,8 @@
             font-weight: 300;
         }
 
-        .card {
-            transition: opacity .25s ease-in-out;
-            margin: 0;
-            opacity: 0.6;
-            text-align: center;
-
-            h1 {
-                font-weight: 300;
-                font-size: $font-size-huge;
-                letter-spacing: .2em;
-
-                strong {
-                    display: block;
-                    font-size: em($font-size-large,$font-size-huge);
-                }
-            }
-
-            p {
-                max-width: none;
-            }
-
-            &:nth-child(2) {
-                opacity: 1;
-
-                & > .card div {
-                    order: 4;
-                }
-            }
-        }
-
         &:hover {
-            .card {
+            .project {
                 opacity: 0.6;
 
                 &:hover {
@@ -54,11 +24,40 @@
         }
     }
 
+    .project {
+        transition: opacity .25s ease-in-out;
+        margin: 0;
+        opacity: 0.6;
+        text-align: center;
+
+        h1 {
+            font-weight: 300;
+            font-size: $font-size-huge;
+            letter-spacing: .2em;
+
+            strong {
+                display: block;
+                font-size: em($font-size-large,$font-size-huge);
+            }
+        }
+
+        p {
+            max-width: none;
+        }
+
+        &:nth-child(2) {
+            opacity: 1;
+
+            & > .card div {
+                order: 4;
+            }
+        }
+    }
 }
 
 @mixin projects-large() {
 
-    .projects .card {
+    .project {
 
         &:nth-of-type(2n) > div {
             order: 3;
