--- a/_includes/components/form.html
+++ b/_includes/components/form.html
@@ -5,7 +5,7 @@
   <p>{{ form.success }}</p>
 </div>
 
-<form class="block" action="/{{ page.url }}#{{ form.name }}-success" name="contact" netlify netlify-honeypot="gotcha">
+<form class="block" action="{{ page.url }}#{{ form.name }}-success" name="contact" netlify netlify-honeypot="gotcha">
   
   <h3 class="hidden">{{ form.title }}</h3>
   <input type="text" name="gotcha" style="display:none" />
