--- a/_includes/components/form.html
+++ b/_includes/components/form.html
@@ -1,6 +1,6 @@
 {% assign form = site.forms | where:"name", include.form | first %}
 
-<div id="{{ form.name }}-success" class="hidden message">
+<div id="{{ form.name }}-success" class="hidden message success">
   <p>{{ form.success }}</p>
 </div>
 
